--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
-    "lint": "jshint **.js"
+    "jshint": "jshint *.js"
   },
   "author": {
     "name": "Michael Plakhov",
