--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "mocha": "2.x",
     "jshint": "2.6.x"
   },
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "evemit": "^1.0.2"
+  }
 }
