--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
-    "jshint": "jshint *.js"
+    "jshint": "jshint *.js",
+    "cover": "istanbul cover  _mocha -- -R spec"
   },
   "repository": {
     "type": "git",
@@ -32,7 +33,8 @@
   },
   "devDependencies": {
     "mocha": "2.x",
-    "jshint": "2.6.x"
+    "jshint": "2.6.x",
+    "istanbul": "^0.3.21"
   },
   "license": "ISC",
   "dependencies": {
